# PartyBot

./: .env  .pylintrc  README.md  dodo.py  kudago.py  main.py  pyproject.toml  request.py  requirements.txt  setup.cfg  tools.py
doc/: bot.rst  conf.py  index.rst  request.rst
doc/locale/en/LC_MESSAGES/: bot.po  index.po  request.po
partybot/: __main__.py  bot.py
tests/: test_bot.py  test_kudago.py  test_main.py  test_tools.py
