[metadata]
name = partybot
version = 0.0.1
url = https://github.com/KondratievaOlesya/PartyBot
author =  Kondratieva Olesya
author_email = kondrateva@yandex.ru
description = Bot to look for events
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = partybot
include_package_data = True
install_requires =
    babel==2.9.1
    alabaster==0.7.12
    apscheduler==3.6.3
    astroid==2.5.3
    certifi==2020.12.5
    chardet==4.0.0
    click==8.0.1
    cloudpickle==1.6.0
    colorama==0.4.4
    docutils==0.17.1
    idna==2.10
    imagesize==1.2.0
    isort==5.8.0
    jinja2==3.0.1
    lazy_object_proxy==1.6.0
    livereload==2.6.3
    markupsafe==2.0.1
    mccabe==0.6.1
    packaging==20.9
    parso==0.8.2
    pygments==2.9.0
    pyparsing==2.4.7
    pytz==2021.1
    requests==2.25.1
    six==1.15.0
    snowballstemmer==2.1.0
    toml==0.10.2
    tornado==6.1
    tzlocal==2.1
    urllib3==1.26.4
    wrapt==1.12.1

[options.entry_points]
console_scripts =
    game = partybot.bot:main
